--- a/4Forno.html
+++ b/4Forno.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/Media/4Forno logos 2.0 (5).png"/>
-    <link href="/Code/4Forno.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/4Forno logos 2.0 (5).png"/>
+    <link href="/4Forno.css" rel="stylesheet">
     <title>4Forno</title>
 </head>
 <body>
     <header>
-        <img class="logo" src="/Media/4Forno logos 2.0 (5).png"/>
+        <img class="logo" src="/4Forno logos 2.0 (5).png"/>
     </header>
     <nav>
         <a href="#muffins">Muffins</a>
@@ -21,27 +21,27 @@
     <section>
         <div id="muffins" class="menu-item">
             <h2>Muffins</h2>
-            <img class="comida" src="/Media/Muffins temporal.jpg">
+            <img class="comida" src="/Muffins temporal.jpg">
         </div>
 
         <div id="empanadas" class="menu-item">
             <h2>Empanadas</h2>
-            <img class="comida" src="/Media/Empandas temporal.jpg">
+            <img class="comida" src="/Empandas temporal.jpg">
         </div>
 
         <div id="quiches" class="menu-item">
             <h2>Quiches</h2>
-            <img class="comida" src="/Media/Quiche de pollo temporal.jpeg">
+            <img class="comida" src="/Quiche de pollo temporal.jpeg">
         </div>
 
         <div id="pies" class="menu-item">
             <h2>Pies</h2>
-            <img class="comida" src="/Media/Pumpkin pie temporal.webp">
+            <img class="comida" src="/Pumpkin pie temporal.webp">
         </div>
 
         <div id="flanes" class="menu-item">
             <h2>Flanes</h2>
-            <img class="comida" src="/Media/Muffins temporal.jpg">
+            <img class="comida" src="/Muffins temporal.jpg">
         </div>
     </section>
     <footer>
